test/files/neg/t5093.scala
class T {
  def f[C[X] <: C[X]](l: C[_]) = l.x
}
